# 2022_dx_projects

./: .gitmodules  CMakeLists.txt  LICENSE
assets/: cornell_box.gltf  cube.gltf
src/model/: CMakeLists.txt  app.cpp  app.h  main.cpp  shader.hlsl
src/raytracing/: CMakeLists.txt  app.cpp  app.h  main.cpp  shader.h  shader.hlsl
src/triangle/: CMakeLists.txt  app.cpp  app.h  main.cpp  shader.hlsl
src/utils/: CMakeLists.txt  camera.cpp  gltf_loader.cpp  memory.cpp  window.cpp
src/utils/inc/utils/: camera.h  gltf_loader.h  memory.h  window.h
